data/derived/comb/progs/unify/prog2660.ml.out
Characters 110-118:
  | h :: t -> bigAdd( (mulByDigit (h, l1')) a') in
                                  ^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
